youtube 키워드 부스팅 태그

--- a/templates/testing.html
+++ b/templates/testing.html
@@ -204,10 +204,11 @@
       </button>
       <div class="quick-questions" id="quickQuestions">
         <button class="quick-btn" data-question="로스트아크는 무슨 게임이에요?">로스트아크는 무슨 게임이에요?</button>
+        <button class="quick-btn" data-question="모코코를 위한 입문 영상 추천">모코코를 위한 입문 영상 추천</button>
+        <button class="quick-btn" data-question="가디언나이트에 대해 설명해줘">가디언나이트에 대해 설명해줘</button>
         <button class="quick-btn" data-question="오늘 모험섬 일정 알려주세요">오늘 모험섬 일정 알려주세요</button>
         <button class="quick-btn" data-question="원한 각인서 가격 알려줘">원한 각인서 가격 알려줘</button>
-        <button class="quick-btn" data-question="쿠르잔 북부 지도 보여줘">쿠르잔 북부 지도 보여줘</button>
-        <button class="quick-btn" data-question="카던 입장 조건이 뭐야?">카던 입장 조건이 뭐야?</button>
+        <button class="quick-btn" data-question="별빛 등대의 섬 지도 보여주세요">별빛 등대의 섬 지도 보여주세요</button>
       </div>
       <button class="scroll-arrow right" id="scrollRight">
         <svg viewBox="0 0 24 24"><path d="M8.59 16.59L10 18l6-6-6-6-1.41 1.41L13.17 12z"/></svg>
